--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(to bottom, #2c1810, #1a0f08, #000000);
+  background: #000000;
   min-height: 100vh;
   color: #ffffff;
 }
