--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,23 @@ body {
   scrollbar-width: thin;
   scrollbar-color: #ffffff transparent;
 }
+
+input::placeholder {
+  color: #ffffff !important;
+  opacity: 0.7;
+}
+
+input::-webkit-input-placeholder {
+  color: #ffffff !important;
+  opacity: 0.7;
+}
+
+input::-moz-placeholder {
+  color: #ffffff !important;
+  opacity: 0.7;
+}
+
+input:-ms-input-placeholder {
+  color: #ffffff !important;
+  opacity: 0.7;
+}
